tests/fail/unwrap.glu
let { Option, unwrap }  = import! "std/prelude.glu"

unwrap None
